--- a/rrapp/src/App.css
+++ b/rrapp/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: black;
 }
 
 .App-logo {
@@ -30,4 +31,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.MainTitle {
+  font-family: "Courier New", Courier, monospace;
 }
